[bumpversion]
current_version = 0.2.2
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pyope/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude = 
	docs
	tests/test_data
	.tox
	build
	venv
	.venv

[aliases]
test = pytest

[metadata]
license_file = LICENSE

